package lapr.project.controller;

public class AtualizarItensStockController {
}
