package lapr.project.data;

import lapr.project.model.Produto;

public class ProdutosDB {
    Produto prod;

    /*prod = novoProduto();

    public void getListaProdutos() {

    }

    public void generateID() {

    }

    public void novoProduto(int id, String desig, double peso, double preco_base) {

    }

    public void validaProduto(Produto prod) {

    }

    public void addListaProds(Produto prod) {

    }

    public void addProdutos(List<Produto> lprods) {

    }

    public void validaListaProdutos(List<Produto> lprods) {

    }*/
}
