package lapr.project.ui;

public class AtualizarItensStockUI {
}
