@startuml
skinparam classAttributeIconSize 0

class AplicacaoPOT
{
  +static getInstance()
  +getSessaoAtual()
}

class Produto {
  -Integer idProduto
  -String designacao
  -Double peso
  -Double preco_base
  +Produto(idProduto,designacao,peso,preco_base)
}

class ProdutosDB {
  +getListaProdutos()
  +getProdutoByID(idProd)
  +atualizarProduto(prod)
  +validaListaProdutos()
}

class AtualizarItensStockController {
    +getProdutoByID(idProd)
    +atualizarProduto()
    +getListaProdutos()
}

class AtualizarItensStockUI {
}

AtualizarItensStockUI ..> AtualizarItensStockController
AtualizarItensStockController ..> ProdutosDB
AtualizarItensStockController ..> Produto
AtualizarItensStockController ..> AplicacaoPOT

ProdutosDB "1" --> "*" Produto : tem registados

@enduml
